# malaria-prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  malaria.ipynb  predict.py  pyproject.toml  requirements.txt  server.py  train2.py
